[package]
name = "serial_port"
version = "0.1.0"
authors = ["Max Lavrenov <max.lavrenov@optiopay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false


[dependencies]
serde = "1.0.107"
serde_derive = "1.0.106"
serialport = "3.3.0"
mio-serial = "3.3.1"
smol = "0.1.4"
piper = "0.1.1"
futures = "0.3.5"
postcard = "0.5.0"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "serializers_benchmark"
harness = false


